--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
-      <h1>Today I Learned</h1>
+    <header class="header">
+      <div class="logo">
+        <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
+        <h1>Today I Learned</h1>
+      </div>
       <button>Share a fact</button>
     </header>
 
-    <form>
+    <form class="fact-form">
       <input type="text" placeholder="Share a fact with the world..." />
       <span>200</span>
       <input type="text" placeholder="Trustworthy spurce..." />
@@ -49,25 +51,46 @@
           <li>
             <button>Science</button>
           </li>
+          <li>
+            <button>Finance</button>
+          </li>
+          <li>
+            <button>Society</button>
+          </li>
+          <li>
+            <button>Entertainment</button>
+          </li>
+          <li>
+            <button>Health</button>
+          </li>
+          <li>
+            <button>History</button>
+          </li>
+          <li>
+            <button>News</button>
+          </li>
         </ul>
       </aside>
 
       <section>
         <ul>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span class="tag">#technology#</span>
             </p>
-            <div>
+            <span class="tag" style="background-color: #3b82f6"
+              >#technology#</span
+            >
+            <div class="vote-buttons">
               <button>👍 <strong>24</strong></button>
               <button>🤯 <strong>9</strong></button>
               <button>⛔ <strong>4</strong></button>
             </div>
           </li>
-          <li>
-            <p class="fact">
+
+          <li class="fact">
+            <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
@@ -76,9 +99,9 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span class="tag">#society#</span>
             </p>
-            <div>
+            <span class="tag" style="background-color: #eab308">#society#</span>
+            <div class="vote-buttons">
               <button>👍 <strong>11</strong></button>
               <button>🤯 <strong>2</strong></button>
               <button>⛔ <strong>0</strong></button>
