--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
+    <header>
       <div class="logo">
         <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
         <h1>Today I Learned</h1>
