--- a/index.html
+++ b/index.html
@@ -13,102 +13,112 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
-        <h1>Today I Learned</h1>
-      </div>
-      <button>Share a fact</button>
-    </header>
+    <div class="container">
+      <header>
+        <div class="logo">
+          <img src="logo.png" alt="Today I Learned Logo" />
+          <h1>Today I Learned</h1>
+        </div>
+        <button>Share a fact</button>
+      </header>
 
-    <form class="fact-form">
-      <input type="text" placeholder="Share a fact with the world..." />
-      <span>200</span>
-      <input type="text" placeholder="Trustworthy spurce..." />
-      <select name="" id="">
-        <option value="">Choose category:</option>
-        <option value="technology">Technology</option>
-        <option value="science">Science</option>
-        <option value="finance">Finance</option>
-        <option value="society">Society</option>
-        <option value="entertainment">Entertainment</option>
-        <option value="health">Health</option>
-        <option value="history">History</option>
-        <option value="news">News</option>
-      </select>
-      <button>Post</button>
-    </form>
+      <form class="fact-form">
+        <input type="text" placeholder="Share a fact with the world..." />
+        <span>200</span>
+        <input type="text" placeholder="Trustworthy spurce..." />
+        <select name="" id="">
+          <option value="">Choose category:</option>
+          <option value="technology">Technology</option>
+          <option value="science">Science</option>
+          <option value="finance">Finance</option>
+          <option value="society">Society</option>
+          <option value="entertainment">Entertainment</option>
+          <option value="health">Health</option>
+          <option value="history">History</option>
+          <option value="news">News</option>
+        </select>
+        <button>Post</button>
+      </form>
 
-    <main>
-      <aside>
-        <ul>
-          <li>
-            <button>All</button>
-          </li>
-          <li>
-            <button>Technology</button>
-          </li>
-          <li>
-            <button>Science</button>
-          </li>
-          <li>
-            <button>Finance</button>
-          </li>
-          <li>
-            <button>Society</button>
-          </li>
-          <li>
-            <button>Entertainment</button>
-          </li>
-          <li>
-            <button>Health</button>
-          </li>
-          <li>
-            <button>History</button>
-          </li>
-          <li>
-            <button>News</button>
-          </li>
-        </ul>
-      </aside>
+      <main>
+        <aside>
+          <ul>
+            <li>
+              <button>All</button>
+            </li>
+            <li>
+              <button>Technology</button>
+            </li>
+            <li>
+              <button>Science</button>
+            </li>
+            <li>
+              <button>Finance</button>
+            </li>
+            <li>
+              <button>Society</button>
+            </li>
+            <li>
+              <button>Entertainment</button>
+            </li>
+            <li>
+              <button>Health</button>
+            </li>
+            <li>
+              <button>History</button>
+            </li>
+            <li>
+              <button>News</button>
+            </li>
+          </ul>
+        </aside>
 
-      <section>
-        <ul>
-          <li class="fact">
-            <p>
-              React is being developed by Meta (formerly facebook)
-              <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-            </p>
-            <span class="tag" style="background-color: #3b82f6"
-              >#technology#</span
-            >
-            <div class="vote-buttons">
-              <button>👍 <strong>24</strong></button>
-              <button>🤯 <strong>9</strong></button>
-              <button>⛔ <strong>4</strong></button>
-            </div>
-          </li>
-
-          <li class="fact">
-            <p>
-              Millennial dads spend 3 times as much time with their kids than
-              their fathers spent with them. In 1982, 43% of fathers had never
-              changed a diaper. Today, that number is down to 3%
-              <a
-                href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
-                target="_blank"
-                >(Source)</a
+        <section>
+          <ul>
+            <li class="fact">
+              <p>
+                React is being developed by Meta (formerly facebook)
+                <a
+                  class="source"
+                  href="https://opensource.fb.com/"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #3b82f6"
+                >#technology#</span
               >
-            </p>
-            <span class="tag" style="background-color: #eab308">#society#</span>
-            <div class="vote-buttons">
-              <button>👍 <strong>11</strong></button>
-              <button>🤯 <strong>2</strong></button>
-              <button>⛔ <strong>0</strong></button>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
+              <div class="vote-buttons">
+                <button>👍 <strong>24</strong></button>
+                <button>🤯 <strong>9</strong></button>
+                <button>⛔ <strong>4</strong></button>
+              </div>
+            </li>
+
+            <li class="fact">
+              <p>
+                Millennial dads spend 3 times as much time with their kids than
+                their fathers spent with them. In 1982, 43% of fathers had never
+                changed a diaper. Today, that number is down to 3%
+                <a
+                  class="source"
+                  href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #eab308"
+                >#society#</span
+              >
+              <div class="vote-buttons">
+                <button>👍 <strong>11</strong></button>
+                <button>🤯 <strong>2</strong></button>
+                <button>⛔ <strong>0</strong></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
