added button styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="logo.png" alt="Today I Learned Logo" />
           <h1>Today I Learned</h1>
         </div>
-        <button>Share a fact</button>
+        <button class="btn btn-large">Share a fact</button>
       </header>
 
       <form class="fact-form">
@@ -37,38 +37,70 @@
           <option value="history">History</option>
           <option value="news">News</option>
         </select>
-        <button>Post</button>
+        <button class="btn btn-large">Post</button>
       </form>
 
       <main>
         <aside>
           <ul>
-            <li>
-              <button>All</button>
+            <li class="category">
+              <button class="btn btn-all-categories">All</button>
             </li>
-            <li>
-              <button>Technology</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #3b82f6">
+                Technology
+              </button>
             </li>
-            <li>
-              <button>Science</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #16a34a">
+                Science
+              </button>
             </li>
-            <li>
-              <button>Finance</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #ef4444">
+                Finance
+              </button>
             </li>
-            <li>
-              <button>Society</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #eab308">
+                Society
+              </button>
             </li>
-            <li>
-              <button>Entertainment</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #db2777">
+                Entertainment
+              </button>
             </li>
-            <li>
-              <button>Health</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #14b8a6">
+                Health
+              </button>
             </li>
-            <li>
-              <button>History</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #f97316">
+                History
+              </button>
             </li>
-            <li>
-              <button>News</button>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #8b5cf6">
+                News
+              </button>
             </li>
           </ul>
         </aside>
@@ -89,9 +121,9 @@
                 >#technology#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>24</strong></button>
-                <button>🤯 <strong>9</strong></button>
-                <button>⛔ <strong>4</strong></button>
+                <button>👍 24</button>
+                <button>🤯 9</button>
+                <button>⛔ 4</button>
               </div>
             </li>
 
@@ -111,9 +143,9 @@
                 >#society#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>11</strong></button>
-                <button>🤯 <strong>2</strong></button>
-                <button>⛔ <strong>0</strong></button>
+                <button>👍 11</button>
+                <button>🤯 2</button>
+                <button>⛔ 0</button>
               </div>
             </li>
           </ul>
