updated form elements

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       </header>
 
       <form class="fact-form">
-        <input type="text" placeholder="Share a fact with the world..." />
+        <input
+          type="text"
+          id="share-fact"
+          placeholder="Share a fact with the world..." />
         <span>200</span>
         <input type="text" placeholder="Trustworthy spurce..." />
         <select name="" id="">
@@ -118,7 +121,7 @@
                 >
               </p>
               <span class="tag" style="background-color: #3b82f6"
-                >#technology#</span
+                >technology</span
               >
               <div class="vote-buttons">
                 <button>👍 24</button>
@@ -139,9 +142,7 @@
                   >(Source)</a
                 >
               </p>
-              <span class="tag" style="background-color: #eab308"
-                >#society#</span
-              >
+              <span class="tag" style="background-color: #eab308">society</span>
               <div class="vote-buttons">
                 <button>👍 11</button>
                 <button>🤯 2</button>
@@ -152,5 +153,6 @@
         </section>
       </main>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
