--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
         </section>
       </main>
     </div>
-    <script src="app.js"></script>
+    <script src="examples.js"></script>
   </body>
 </html>
