created react app

--- a/v1/index.html
+++ b/v1/index.html
@@ -109,7 +109,7 @@
         </aside>
 
         <section>
-          <ul>
+          <ul class="facts-list">
             <li class="fact">
               <p>
                 React is being developed by Meta (formerly facebook)
@@ -153,6 +153,6 @@
         </section>
       </main>
     </div>
-    <script src="sample.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
